Fix field alignment in location form.

--- a/mozillians/static/mozillians/css/main.less
+++ b/mozillians/static/mozillians/css/main.less
@@ -1912,98 +1912,18 @@ body#edit-profile {
       }
     }
 
-    // map things
-    #location {
-      position: relative;
-      height: 280px;
 
-      input {
-        box-sizing: border-box;
-      }
-
-      > *{
-        position: absolute;
-      }
-
-      #location_search {
-        right: 10em;
-        bottom: 1.8em;
-        width: 13em;
-        @media (max-width: @breakMobileLandscape) {
-            width: 6.4em;
-            right: 9.6em;
+    #mylocation fieldset, #registration-location-panel {
+        .select2-container {
+            @media (max-width: @breakTablet) {
+                min-width: 100%;
+            }
         }
-        height: 2em;
-      }
-
-      #location_search_button {
-        right: 10px;
-        bottom: 2em;
-        height: 2em;
-      }
-
-      #location_search_results {
-        background-color: white;
-        max-height: 14em;
-        right: 0.8em;
-        bottom: 3.5em;
-        border-radius: 4px;
-        width: 23em;
-        padding: 0.5em;
-        @media (max-width: @breakMobileLandscape) {
-            width: 17em;
+        label {
+            @media (min-width: @breakTablet) {
+                min-width: 75px;
+            }
         }
-        overflow-y:auto;
-        -webkit-overflow-scrolling: touch;
-        li {
-          cursor: pointer;
-          padding-left: 0.5em;
-          border-radius: 1em;
-        }
-        li:hover {
-          background-color: #eee;
-        }
-      }
-
-      #location_search_loading {
-        bottom: 4.4em;
-        right: 0.8em;
-        height: 4px;
-        width: 24em;
-        @media (max-width: @breakMobileLandscape) {
-            width: 18em;
-        }
-      }
-
-      #map {
-        width: 100%;
-        height: 100%;
-        margin-bottom: 15px;
-      }
-
-      #location_gps_button{
-        width: 26px;
-        height: 26px;
-        top: 71px;
-        left: 10px;
-        line-height: 29px;
-        font-size: 18px;
-        text-align: center;
-        border: solid 1px #9a9a9a;
-        border-radius: 3px;
-        background-color: white;
-        cursor:pointer;
-      }
-      #location_gps_button:hover{
-        background-color:#fafafa;
-      }
-
-      #location_gps_loading{
-        width:28px;
-        height:4px;
-        top:100px;
-        left:10px;
-      }
     }
 
     .panel-heading {
